# Camera-AI

./: .env.example  README.md  docker-compose.yml  help_run.md  main.py  requirements.txt  run.py
ESP32_pcb/: platformio.ini
ESP32_pcb/src/: main.cpp
api/: __init__.py  app.py  config.py  dependencies.py  models.py
api/routes/: cameras.py  config.py  evidence.py  mqtt.py  predict.py  root.py  settings.py  stream.py  violations.py  zones.py
api/schemas/: __init__.py  evidence.py
api/services/: alpr_service.py  db_service.py  image_service.py  local_settings_service.py  mqtt_service.py  stream_manager.py
database/: README.md  schema.sql  seed.sql
docs/: API_REFERENCE.md  DATABASE.md  EVIDENCE_API.md  MOBILE_APP.md  OCR_INTEGRATION.md  supabase_config.md  supabase_storage.md
docs/thingsboard/: 00_README.md  01_ARCHITECTURE_AND_MATCHING.md  02_PROVISIONING_AND_IDENTITY.md  03_MQTT_ATTRIBUTES_RPC.md  04_OTA_AND_FIRMWARE_LIFECYCLE.md  05_BACKEND_SYNC_AND_DASHBOARD.md  06_STANDARD_OPERATION_FLOWS.md
esp32-s3-devkitc-1/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini.example  sdkconfig  sdkconfig.esp32-s3-devkitc-1
esp32-s3-devkitc-1/boards/: goouuu-esp32-s3-cam.json
esp32-s3-devkitc-1/include/: app_config.h  (+11 more)
esp32-s3-devkitc-1/main/: CMakeLists.txt  app_config.c  backend_sync.c  button_task.c  camera_task.c  dns_server.c  goouuu_camera.c  health_task.c  idf_component.yml  main.c  mqtt_app.c  stream_server.c  task_manager.c  tb_provisioning.c  traffic_light.c  wifi_manager.c
utils/: alpr_core.py  license_plate_ocr.py  ocr.py  utils.py
(+1 files in other folders)
